<resources>
    <string name="app_name">Banking_MobileApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="email_address_login">Email Address</string>
    <string name="password_login">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email_log">bernadette.predovic@example.net</string>
    <string name="password_log">906503</string>
    <string name="process">Balance Detail</string>
    <string name="profile">Profile Detail</string>
    <string name="transfer">Transfer</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="transfer_amount">Transfer amount</string>
    <string name="account_pin">Account Pin</string>
</resources>