<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextLoginPasswod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="Selamat Datang di Rakamin Banking App"
        android:textSize="70px"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="31dp" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="264dp"
        android:text="@string/login"
        android:theme="@style/Base.Theme.Banking_MobileApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_st"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="tunai"
        android:src="@drawable/logo"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="475dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/btn_master"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Setor Tunai"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="525dp"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/iv_emy"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="money"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="475dp" />

    <TextView
        android:id="@+id/btn_money"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="E-money"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="525dp" />

    <ImageView
        android:id="@+id/iv_qrs"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="qr"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="278dp"
        tools:layout_editor_absoluteY="475dp" />


    <TextView
        android:id="@+id/btn_qrs"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="QR Bayar"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="525dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="login with pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>